@@ -1,6 +1,7 @@
-[gd_scene load_steps=25 format=3 uid="uid://cuqm30mdbu41k"]
+[gd_scene load_steps=26 format=3 uid="uid://cuqm30mdbu41k"]
 
 [ext_resource type="Script" uid="uid://d33oqm6uprjxl" path="res://Board/DuelCreaturesBoard.cs" id="1_s27tx"]
+[ext_resource type="Resource" uid="uid://cprca6flaorhc" path="res://Sleeves/VanguardDefaultSleeve.tres" id="3_a02pn"]
 [ext_resource type="PackedScene" uid="uid://b7fl8cs62jr2v" path="res://Board/Hand.tscn" id="5_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://bevj84kr2566s" path="res://Board/BaseComponents/CardLineStatic.tscn" id="7_3hmgy"]
 [ext_resource type="PackedScene" uid="uid://bj6jrhfey56is" path="res://Board/Vfx/AttackIndicator.tscn" id="9_6kkbp"]
@@ -185,6 +186,7 @@ text = "End Phase"
 [node name="PlayerArea" parent="VBoxContainer" instance=ExtResource("11_wn2yo")]
 unique_name_in_owner = true
 layout_mode = 2
+SleeveInfo = ExtResource("3_a02pn")
 
 [node name="Open2" type="Control" parent="VBoxContainer"]
 layout_mode = 2
