@@ -7,6 +7,7 @@ v.0004 GUI Improvements
 - Ride and Call Sfx
 - Added Target Indicator when selecting which unit to attack 
 - Target indicators will only apply for valid targets
+- PlayArea can now load Sleeves (Deck and Damage Zone)
 
 v.0003 Moar Cards
 - Updated for ArC v.0000006
